Services section finished

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <main>
 
-    
+ <!--Intro Header section-->   
     <section  id="header-section" class="grid">
 
         <div class="grid-flow-rows texts">
