Corrigindo texto de apresentação.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
 
-
+    <link rel="shortcut icon" href="./assets/icons/language icons/bug-outline.svg" type="image/x-icon">
     
 
-    <title>Portifólio Dev | Bruno Rigoni</title>
+    <title>Portfólio Dev | Bruno Rigoni</title>
 </head>
 <body>
 
@@ -42,7 +42,7 @@
             <div class="grid ">
                 <h2 class="subtitle">Hello World! Meu nome é <span>Bruno Rigoni</span> e sou</h2>
                 <h1 class="title-lg">Desenvolvedor Fullstack</h3>
-                <p class="text-sm"> Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
+                <p class="text-sm"> Transformo necessidades em aplicações reais, envolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
             </div> 
 
         </div>
